@@ -86,4 +86,10 @@ VOIKKOEXPORT enum voikko_sentence_type voikko_next_sentence_start_ucs4(int handl
 
 VOIKKOEXPORT enum voikko_sentence_type voikko_next_sentence_start_cstr(int handle,
              const char * text, size_t textlen, size_t * sentencelen);
+
+VOIKKOEXPORT voikko_grammar_error voikko_next_grammar_error_cstr(int handle, const char * text,
+                                                                 size_t textlen, size_t startpos);
+
+VOIKKOEXPORT const char * voikko_error_message_cstr(int error_code, const char * language);
+
 #endif
