@@ -1,3 +1,7 @@
+2008-06-28 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Add API for grammar checking.
+
 2008-06-08 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Work on sentence splitting.
